2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Make 'make check' work on emu.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace libcurses with our own vt100 handling for the ease of testing
	and decreasing prerequisites.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def: Fix grub-emu and grub-emu-lite sources.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Put proper #if's so that its users don't
	compile when not needed.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/pseries_test.in: New test.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Add test to check that different boot mediums work.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Rename i386-ieee1275 core image due to
	ofw limited ISO support.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix loongson conditional.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable mipsel-arc.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Add serial on ARC platform.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/powerpc/bootinfo.txt.in: Missing update from previous
	commit.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Add missing double semicolon.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix loongson filename.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Move all files that don't have a location
	set in stone under /boot/grub. Use ISO hard links rather than copies
	to save some space.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/console.c (grub_console_dimensions): Ignore
	bogus SLOF values.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make check work on mips-arc.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>
