@@ -25,8 +25,8 @@ grub_halt (void)
 {
   /* Not standardized.  We try three known commands.  */
 
-  grub_ieee1275_interpret ("shut-down", 0);
   grub_ieee1275_interpret ("power-off", 0);
+  grub_ieee1275_interpret ("shut-down", 0);
   grub_ieee1275_interpret ("poweroff", 0);
 
   while (1);
